ola-parser/src/testdata/syntaxTests/parsing/inline_array_empty_cells_check_without_lvalue.sol
contract c {
	uint[] a;
	fn f() returns (uint, uint) {
		return ([3, ,4][0]);
	}
}
// ----
// ParserError 4799: (75-76): Expected expression (inline array elements cannot be omitted).
